# cchad

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: catalog.md  cli.md  concepts.md  configuration.md  deconfliction.md  extending.md  manifest.md  plugin.md
plugins/cchad/.claude-plugin/: plugin.json
plugins/cchad/commands/: init.md  plan.md  setup.md  sync.md
src/cchad/: __init__.py  __main__.py  cli.py  data_files.py  display.py  models.py  paths.py
src/cchad/apply/: __init__.py  atomic.py
src/cchad/catalog/: __init__.py
src/cchad/config/: __init__.py
src/cchad/data/: catalog.yaml  presets.yaml  rules.yaml
src/cchad/data/blocks/: karpathy-claude-md.md
src/cchad/data/skills/django-skill/: SKILL.md
src/cchad/data/skills/express-skill/: SKILL.md
src/cchad/data/skills/fastapi-skill/: SKILL.md
src/cchad/data/skills/flask-skill/: SKILL.md
src/cchad/data/skills/go-skill/: SKILL.md
src/cchad/data/skills/javascript-skill/: SKILL.md
src/cchad/data/skills/nextjs-skill/: SKILL.md
src/cchad/data/skills/python-skill/: SKILL.md
src/cchad/data/skills/react-patterns-skill/: SKILL.md
src/cchad/data/skills/remotion-skill/: SKILL.md
src/cchad/data/skills/svelte-skill/: SKILL.md
src/cchad/data/skills/tailwind-skill/: SKILL.md
src/cchad/data/skills/typescript-skill/: SKILL.md
src/cchad/data/skills/vue-skill/: SKILL.md
src/cchad/detect/: __init__.py  mappings.py  parsers.py
src/cchad/manifest/: __init__.py
src/cchad/resolve/: __init__.py
src/cchad/sync/: __init__.py
tests/: conftest.py  test_apply.py  test_catalog.py  test_cli.py  test_config.py  test_detect.py  test_manifest.py  test_resolve.py  test_sync.py
