[project]
name = "cchad"
dynamic = ["version"]
description = "A package manager and lockfile for your Claude Code setup."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cypsy1714", email = "70166815+Cypsy1714@users.noreply.github.com" }]
keywords = ["claude-code", "mcp", "cli", "package-manager", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Cypsy1714/cchad"
Repository = "https://github.com/Cypsy1714/cchad"
Documentation = "https://github.com/Cypsy1714/cchad/tree/main/docs"
Issues = "https://github.com/Cypsy1714/cchad/issues"
Changelog = "https://github.com/Cypsy1714/cchad/blob/main/CHANGELOG.md"

[project.scripts]
cchad = "cchad.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cchad/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cchad"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cchad",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
